--- a/client/package.json
+++ b/client/package.json
@@ -16,9 +16,10 @@
     "react-chartjs-2": "^3.1.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^3.4.4",
     "sass": "^1.42.1",
     "socket.io-client": "^4.2.0",
+    "validator": "^13.6.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
